--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 </head>
 <center>
 <h2>
-<a href="https://gaoren.vercel.app/" target="_blank" style="color: red;">简易传统数术程序首页</a>
+<a href="https://gaoren.netlify.app/" target="_blank" style="color: red;">简易传统数术程序首页</a>
 </h2>
 <br>
 <h3>
-<a rel="nofollow" target="__blank" href="https://bazis.vercel.app/">八字排盘</a><br>
-<a rel="nofollow" target="__blank" href="https://laohl.vercel.app/">老黄历</a><br>
-<a rel="nofollow" target="__blank" href="https://sxwnl.vercel.app/">寿星天文历</a>
+<a rel="nofollow" target="__blank" href="https://bazi.netlify.app/">八字排盘</a><br>
+<a rel="nofollow" target="__blank" href="https://lhl.netlify.app/">老黄历</a><br>
+<a rel="nofollow" target="__blank" href="https://wnl.netlify.app/">寿星天文历</a>
 <br>
 </h3>
 <br>
