--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h3>
 <a rel="nofollow" target="__blank" href="https://bazi.netlify.app/">八字排盘</a><br>
 <a rel="nofollow" target="__blank" href="https://lhl.netlify.app/">老黄历</a><br>
-<a rel="nofollow" target="__blank" href="https://wnl.netlify.app/">寿星天文历</a>
+<a rel="nofollow" target="__blank" href="https://wnl.netlify.app/">寿星天文历</a> <a rel="nofollow" target="__blank" href="https://sxmb.netlify.app/">手机版</a>
 <br>
 </h3>
 <br>
