--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>简易传统数术程序</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="lunar,阳历,阴历,公历,农历" />
-<meta name="description" content="lunar是一个无依赖的支持阳历和阴历的日历工具库。" />
+<meta name="keywords" content="lunar,阳历,阴历,公历,农历,佛历,道历" />
+<meta name="description" content="lunar是一个无依赖的支持阳历、阴历、佛历和道历的日历工具库。" />
 <meta name="author" content="6tail" />
 <link rel="stylesheet" href="common.css">
 <link rel="stylesheet" href="highlight.min.css">
@@ -25,7 +25,8 @@
 <br>
 <h3>
 <a rel="nofollow" target="__blank" href="https://bazi.netlify.app/">八字排盘</a><br>
-<a rel="nofollow" target="__blank" href="https://lhl.netlify.app/">老黄历</a><br>
+<a rel="nofollow" target="__blank" href="https://lhl.netlify.app/">老黄历</a> <a rel="nofollow" target="__blank" href="https://nianli.netlify.app/">年历</a> <a rel="nofollow" target="__blank" href="https://monli.netlify.app/">月历</a><br>
+<a rel="nofollow" target="__blank" href="https://foli.netlify.app/">佛历</a> <a rel="nofollow" target="__blank" href="https://daoli.netlify.app/">道历</a><br>    
 <a rel="nofollow" target="__blank" href="https://wnl.netlify.app/">寿星天文历</a> <a rel="nofollow" target="__blank" href="https://sxmb.netlify.app/">手机版</a>
 <br>
 </h3>
