--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </h2>
 <br>
 <h3>
-<a rel="nofollow" target="__blank" href="https://bazi.netlify.app/">八字排盘</a><br>
+<a rel="nofollow" target="__blank" href="https://bazi.netlify.app/">八字排盘</a> <a rel="nofollow" target="__blank" href="https://bzzyl.netlify.app/">八字转阳历</a><br>
 <a rel="nofollow" target="__blank" href="https://lhl.netlify.app/">老黄历</a> <a rel="nofollow" target="__blank" href="https://nianli.netlify.app/">年历</a> <a rel="nofollow" target="__blank" href="https://monli.netlify.app/">月历</a><br>
 <a rel="nofollow" target="__blank" href="https://foli.netlify.app/">佛历</a> <a rel="nofollow" target="__blank" href="https://daoli.netlify.app/">道历</a><br>    
 <a rel="nofollow" target="__blank" href="https://wnl.netlify.app/">寿星天文历</a> <a rel="nofollow" target="__blank" href="https://sxmb.netlify.app/">手机版</a>
